fix: optically align Footer email icons

--- a/components/shell/site-footer.module.css
+++ b/components/shell/site-footer.module.css
@@ -110,6 +110,7 @@
   background: transparent;
   color: var(--color-paper);
   text-decoration: none;
+  translate: 0 3px;
 }
 
 .copyButton {
